--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/*  your css code here. If applicable */
 /* General styles */
 body {
   margin: 0;
@@ -34,7 +33,7 @@ header {
 }
 
 /* Hamburger menu styles */
-.hamburger-menu {
+.ham {
   display: none;
   flex-direction: column;
   cursor: pointer;
